# video-player

./: Cargo.toml
client/: app.js  index.html
src/: lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  video.rs
