[package]
name = "video-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
wgpu = "0.13.1"
tokio = { version = "1.20.1", features = ["full"] }
bytemuck = { version = "1.4", features = [ "derive" ] }

[dependencies.ffmpeg-next]
version = "5.1.1"
# default-features = false
# features = [ "build-lib-x264" ]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
