[package]
name = "video-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
wgpu = "0.13.1"
tokio = { version = "1.20.1", features = ["full"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
glam = "0.21.3"

[dependencies.ffmpeg-next]
version = "5.1.1"
